--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -907,6 +907,18 @@ transition: transform 0.3s ease; /* kevs */
   height: 100%;
   overflow: visible;
 }
+.badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #ff0000;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 1px 4px;
+  font-weight: bold;
+  font: 700 10px "SfProDisplay-Bold",  SFPRO;
+
+}
 .subnav {
   background: #000000;
   padding: 8px 160px 8px 160px;
